hphp/hack/test/typecheck/enum/bad/trivial_compare_int_arraykey_enum_to_float_args_bad.php
<?hh

enum A: int {
  X = 1;
}

function f1(float $x, A $y): bool {
  return $x === $y;
}

function f2(float $x, A $y): bool {
  return $y === $x;
}

function f3(float $x, A $y): bool {
  return $x !== $y;
}

function f4(float $x, A $y): bool {
  return $y !== $x;
}
